syntax = "proto3";

option go_package = "github.com/dojeto/order-management-system/common/api";

package api;

service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (Order);
}

message Order{
    string ID = 1;
    repeated Item Items = 2;
}

message Item {
    string ID = 1;
    string Name = 2;
    int32 Quantity = 3;
    string PriceID = 4;

}

message ItemWithQuantity{
    string ID = 1;
    int32 Quantity = 2;
}

message CreateOrderRequest{
    string customerID = 1;
    repeated ItemWithQuantity Items = 2;
}